sonar lint improvements